cmake_minimum_required(VERSION 3.21)
project(cpp)

set(CMAKE_CXX_STANDARD 14)
add_executable(studentWork studentWork.cpp)
add_executable(ifstream readIn_out/ifstream.cpp)
add_executable(threads homeworkDemos/threads.cpp)
add_executable(OOP OOP/OOP.cpp)
add_executable(OOP_pets OOP/OOP_pets.cpp)
add_executable(linkedLists data_structures/linkedLists.cpp)