cmake_minimum_required(VERSION 3.21)
project(cpp)

set(CMAKE_CXX_STANDARD 14)
add_executable(studentWork studentWork.cpp)
add_executable(ifstream readIn_out/ifstream.cpp)
add_executable(threads homeworkDemos/threads.cpp)
add_executable(OOP OOP/OOP.cpp)
add_executable(OOP_pets OOP/OOP_pets.cpp)
add_executable(linkedLists data_structures/linkedLists.cpp)
add_executable(isSorted "recursive functions/isSorted.cpp")
add_executable(misc_shapes shapes/misc_shapes.cpp)
add_executable(nodes "recursive functions/nodes.cpp")
add_executable(17week_exam3 examPrep/17week_exam3.cpp)
add_executable(linkedLists1 homeworkDemos/linkedLists1.cpp)
add_executable(diamond shapes/diamond.cpp)
add_executable(17week_exam3_q9 examPrep/17week_exam3_q9.cpp)
add_executable(twosymbolHourglass shapes/twosymbolHourglass.cpp)
add_executable(barndoor shapes/barndoor.cpp)
add_executable(barndoor2 shapes/barndoor2.cpp)
add_executable(letter_triangle "shapes/letter triangle.cpp")
add_executable(exam2 examPrep/exam2.cpp)
add_executable(maxZeroLength "recursive functions/maxZeroLength.cpp")
add_executable(2dup "recursive functions/2dup.cpp")